--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <img src="./logo.svg" alt="Tom's Jazz School">
+        <img src="./imagens/logo.svg" alt="Tom's Jazz School">
         <nav class="mt-1 mx-auto">
             <a href="#">Inicio</a>
             <a href="#">Cursos</a>
@@ -20,7 +20,7 @@
     </header>
     <main>
         <section class="hero-section">
-            <img src="./hero-img.svg" alt="Banda de Jazz tocando">
+            <img src="./imagens/hero-img.svg" alt="Banda de Jazz tocando">
             <div>
                 <h1 class="mt-2">Crie algo <span class="text-primary decoration">impactante</span> com música</h1>
                 <p class="mt-2 mb-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe ipsam minus aliquid amet accusamus esse est. Odio, sint quidem, quisquam recusandae architecto suscipit omnis, accusamus quam consequuntur laboriosam corrupti voluptatum?</p>
@@ -30,35 +30,35 @@
         <section class="courses-section">
             <div class="cards">
                 <article>
-                <img src="./piano.png" alt="Icone de teclas de piano">
+                <img src="./imagens/piano.png" alt="Icone de teclas de piano">
                 <strong>Piano popular</strong>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum deleniti cumque modi. Ab at eaque quae illo sequi, est repellat quis, doloremque nulla officiis reprehenderit aperiam non quam aliquam! Corporis.</p>
                 <a href="#">
-                    <img src="./arrow-right.svg" alt="Ir para a página do curso">
+                    <img src="./imagens/arrow-right.svg" alt="Ir para a página do curso">
                 </a>
             </article>
             <article>
-                <img src="./clef.png" alt="Icone da clave do sol">
+                <img src="./imagens/clef.png" alt="Icone da clave do sol">
                 <strong>Teoria musical</strong>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum deleniti cumque modi. Ab at eaque quae illo sequi, est repellat quis, doloremque nulla officiis reprehenderit aperiam non quam aliquam! Corporis.</p>
                 <a href="#">
-                    <img src="./arrow-right.svg" alt="Ir para a página do curso">
+                    <img src="./imagens/arrow-right.svg" alt="Ir para a página do curso">
                 </a>
             </article>
             <article>
-                <img src="./sax.png" alt="Icone de Saxofone">
+                <img src="./imagens/sax.png" alt="Icone de Saxofone">
                 <strong>Piano alto</strong>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum deleniti cumque modi. Ab at eaque quae illo sequi, est repellat quis, doloremque nulla officiis reprehenderit aperiam non quam aliquam! Corporis.</p>
                 <a href="#">
-                    <img src="./arrow-right.svg" alt="Ir para a página do curso">
+                    <img src="./imagens/arrow-right.svg" alt="Ir para a página do curso">
                 </a>
             </article>
             <article>
-                <img src="./drums.png" alt="Icone de bateria">
+                <img src="./imagens/drums.png" alt="Icone de bateria">
                 <strong>Bateria</strong>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum deleniti cumque modi. Ab at eaque quae illo sequi, est repellat quis, doloremque nulla officiis reprehenderit aperiam non quam aliquam! Corporis.</p>
                 <a href="#">
-                    <img src="./arrow-right.svg" alt="Ir para a página do curso">
+                    <img src="./imagens/arrow-right.svg" alt="Ir para a página do curso">
                 </a>
             </article>
                 </div>
@@ -70,7 +70,7 @@
 
     <footer>
         <div>
-            <img src="./logo.svg" alt="Tom's Jazz School">
+            <img src="./imagens/logo.svg" alt="Tom's Jazz School">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit maxime ipsum fugit impedit aliquam et temporibus neque illum veniam eius non magnam eos eligendi, ad enim. Commodi architecto incidunt eum.</p>
         </div>
         <nav>
